test/langtools/tools/javac/patterns/DuplicateBindingTest.out
DuplicateBindingTest.java:15:43: compiler.err.already.defined: kindname.variable, s, kindname.method, main(java.lang.String[])
1 error
